# zentinull

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURAL_AUDIT.md  DATA_CORRELATION.md  Dockerfile  ENDGAME.md  FIELD_MAPPING_AUDIT_REPORT.md  IDEAS_IMPLEMENTATION.md  Makefile  PLAN_SENTINEL_PORT.md  README.md  REPO_CLEANUP_PLAN.md  SCOPE.md  dashboard.py  docker-compose.yml  pyproject.toml  serve.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: field_registry_auto.json
memory:/root/: memory_summary.md
projects/: __init__.py
projects/default/: manifest.py
scripts/: bench.py  bench_api.py  build_training_set.py  dq.py  e2e_enrichment.py  hw_extract_batch.py  run_ingest.py  run_splink.py  seed_demo_data.py  tunnel.sh
src/zentinull/: __init__.py  config.py  contracts.py  export_for_splink.py  ingest_adapter.py  logging_config.py  normalizer.py  pipeline.py  valentine.py  worker.py
src/zentinull/api/: __init__.py  db.py  metrics.py  models.py  router.py  schema.py  server.py
src/zentinull/cli/: backup.py  db_mgmt.py  pipeline.py  remote.py  render.py  status.py  streaming.py
src/zentinull/ingest/: __init__.py  auth_factory.py  runner.py
src/zentinull/ingestors/: __init__.py  ad.py  auth.py  base.py  fortigate.py  zabbix.py  (+3 more)
tests/: conftest.py  test_attach.py  test_audit_mapping.py  test_bench_scripts.py  test_contracts.py  test_export.py  test_field_history.py  test_manifest.py  test_normalizer.py  test_original_pipeline.py  test_os_family.py  test_project_isolation.py  test_project_paths.py  test_serve.py  test_sot.py  test_splink_parity.py  test_valentine.py  test_validate.py  test_worker.py
tests/api/: conftest.py  test_db_mesh.py  test_db_pure.py  test_metrics.py  test_models.py  test_models_edge.py  test_router.py  test_router_endpoints.py  test_schema.py  test_server.py
tests/cli/: conftest.py  test_backup.py  test_db_mgmt.py  test_format_helpers.py  test_pipeline.py  test_status_api.py  test_status_format.py  test_streaming.py
tests/ingest/: test_auth_factory.py  test_runner.py
tests/ingestors/: test_auth.py  test_base.py  test_base_extended.py  test_ingest_mock.py  test_transform.py
tests/logging/: test_formatters.py  test_setup.py
(+20 files in other folders)
